--- a/public/css/styles-extra-large.css
+++ b/public/css/styles-extra-large.css
@@ -2,6 +2,14 @@
 
     article {
         font-size: 1.2em;
-        margin: 4em;
+        margin: 2em;
+    }
+
+    #img {
+        max-height: 900px;
+        max-width: 700px;
+        margin-left: 4em;
     }
 }
+
+
