--- a/public/css/styles-small.css
+++ b/public/css/styles-small.css
@@ -1,8 +1,7 @@
 body {
     padding-top: 5em;
     font-family: 'Karma', serif;
-    background-color: #2b1000;
-    color: white;
+    background-color: white;
   }
 
 .navbar {
@@ -25,10 +24,11 @@ body {
 
 #img {
   width: 100%;
+  margin: auto;
 }
 
 article {
-  margin: 1.5em;
+  margin: 1em;
   text-align: justify;
 }
 
