--- a/public/css/styles-small.css
+++ b/public/css/styles-small.css
@@ -1,5 +1,7 @@
+/* TEMPLATE */
+
 body {
-    padding-top: 10em;
+    padding-top: 5em;
     font-family: 'Karma', serif;
     background-color: white;
   }
@@ -7,14 +9,17 @@ body {
 .navbar {
   background-color: #052611;
   border: none;
-}
-
-.navbar-inverse .navbar-nav > li > a {
   color: white;
   font-size: 1.1em;
+  padding: 10px 15px;
 }
 
-.navbar-inverse .navbar-nav > li > a:hover {
+ .navbar-inverse .navbar-nav > li > a {
+  color: white;
+  font-size: 1.1em;
+} 
+
+.navbar-inverse .navbar-nav > li:hover  {
   font-weight: bold;
 }
 
@@ -22,16 +27,70 @@ body {
   display: none;
 }
 
+.page-footer {
+  width: 100%;
+  position:absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  padding: 1em 0;
+  background-color: #052611;
+  text-align: center;
+
+}
+footer, footer > a {
+  color: white;
+}
+
+.footerElement {
+  width: 50%;
+}
+
+/* HOME VIEW */
+
 #img {
   width: 100%;
   margin: auto;
 }
 
 article {
-  margin: 1em;
   text-align: justify;
+  line-height: 2;
+  font-size: 1.2em;
 }
 
-input, textarea{
-  color: black;
+.homeView {
+  background-image: url("fond.jpg");
+  margin-bottom: 2em;
 }
+
+#titleArticleHomeView {
+  padding: 0.2em;
+  border-bottom: 1px dashed grey;
+  text-align: center;
+  font-family: 'Dancing Script', cursive;
+}
+
+
+/* Inscription View */
+
+#h2InscriptionView {
+  margin-top: 3em;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+form {
+  text-align: center;
+  margin: 3em auto;
+  max-width: 70%;
+  font-size: 1.2em;
+}
+
+.btn-success {
+  margin-top: 0.8em;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
