--- a/public/css/styles-large.css
+++ b/public/css/styles-large.css
@@ -1,14 +1,7 @@
 @media all and (min-width: 992px) {
 
-    .navbar {
-        margin: 0;
+    .navbar-brand {
+        display: block;
     }
-
-    #jeanForteroche {
-        font-size: 1.8em;
-        padding-left: 70%;
-    }
-   
     
-
 }
