--- a/public/css/styles-medium.css
+++ b/public/css/styles-medium.css
@@ -1,16 +1,25 @@
 @media all and (min-width: 700px) {
 
-    #jeanForteroche {
-        display: block;
-        margin: 0;
-        padding-top: 0.15em;
-        padding-left: 60%;
-        font-size: 1.5em;
-        font-family: 'Major Mono Display', monospace;
-        color: white;
-      }
+    #titleContainer {
+        display: flex;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 
-      form {
-          max-width: 50%;
-      }
+    #textImg {
+        margin: 0;
+        color: white;
+        border: none;
+        font-family: 'Karma', serif;
+        font-size: 3em;
+    }
+
+    #formInscriptionView, #formConnectionView {
+        width: 50%;
+    }
+ 
 }
